--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,16 +17,16 @@ jobs:
     strategy:
       matrix:
         os:
-        - macos-latest
+        #- macos-latest
         - ubuntu-latest
-        - windows-2016
+        #- windows-2016
         include:
         - os: ubuntu-latest
           target: x86_64-unknown-linux-musl
-        - os: macos-latest
-          target: x86_64-apple-darwin
-        - os: windows-2016
-          target: x86_64-pc-windows-msvc
+        #- os: macos-latest
+        #  target: x86_64-apple-darwin
+        #- os: windows-2016
+        #  target: x86_64-pc-windows-msvc
 
     runs-on: ${{matrix.os}}
 
@@ -60,6 +60,9 @@ jobs:
         profile: minimal
         components: clippy, rustfmt
         override: true
+
+    - name: Install libpango1.0-dev
+      run: sudo apt-get install libpango1.0-dev
 
     - name: Version
       run: |
