--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,8 +61,8 @@ jobs:
         components: clippy, rustfmt
         override: true
 
-    - name: Install libpango1.0-dev
-      run: sudo apt-get install libpango1.0-dev
+    - name: Install dependancies
+      run: sudo apt-get install libpango1.0-dev libatk1.0-dev
 
     - name: Version
       run: |
