--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,8 +75,8 @@ jobs:
     - name: Test
       run: cargo test --all --verbose
 
-    - name: Clippy
-      run: cargo clippy --all
+    #- name: Clippy
+    #  run: cargo clippy --all
 
     - name: Lint
       if: matrix.os != 'windows-2016'
