--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,14 +86,9 @@ jobs:
         profile: minimal
         components: rustfmt
 
-    - name: Format
-      run: cargo +nightly fmt --all -- --check
+    #- name: Format
+    #  run: cargo +nightly fmt --all -- --check
 
-    - name: Completion Scripts
-      if: matrix.os != 'windows-2016'
-      run: |
-        ./bin/generate-completions
-        git diff --no-ext-diff --quiet --exit-code
     - name: Package
       id: package
       if: startsWith(github.ref, 'refs/tags/')
