--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,8 @@ jobs:
         #- windows-2016
         include:
         - os: ubuntu-latest
-          target: x86_64-unknown-linux-musl
+          #target: x86_64-unknown-linux-musl
+          target: x86_64-unknown-linux-gnu
         #- os: macos-latest
         #  target: x86_64-apple-darwin
         #- os: windows-2016
